--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'jacoco'
+apply plugin: 'groovy'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -24,6 +25,11 @@ repositories {
 apply from: 'https://raw.githubusercontent.com/FINTlibs/fint-buildscripts/v1.7.0/dependencies.gradle'
 dependencies {
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
+
+    testCompile("org.spockframework:spock-core:${spockSpringVersion}")
+    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    testCompile("org.spockframework:spock-spring:${spockSpringVersion}")
+    testCompile("cglib:cglib-nodep:${cglibVersion}")
 }
 
 jacocoTestReport {
