--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 plugins {
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'com.github.ben-manes.versions' version '0.27.0'
     id 'com.github.kt3k.coveralls' version '2.8.4'
 }
 
 apply plugin: 'java'
 apply plugin: 'groovy'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
 apply plugin: 'groovy'
 
@@ -15,22 +14,20 @@ targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
-    jcenter()
     maven {
         url 'https://repo.fintlabs.no/releases'
     }
+    mavenCentral()
 }
 
-
-apply from: 'https://raw.githubusercontent.com/FINTlibs/fint-buildscripts/v1.7.0/dependencies.gradle'
 dependencies {
-    compileOnly("org.projectlombok:lombok:${lombokVersion}")
+    compileOnly('org.projectlombok:lombok:1.18.20')
     compile('no.fint:fint-spring-secrets:0.2.2')
 
-    testCompile("org.spockframework:spock-core:${spockSpringVersion}")
-    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
-    testCompile("org.spockframework:spock-spring:${spockSpringVersion}")
-    testCompile("cglib:cglib-nodep:${cglibVersion}")
+    testCompile('org.spockframework:spock-core:2.0-groovy-3.0')
+    testCompile("org.springframework.boot:spring-boot-starter-test:1.5.21.RELEASE")
+    testCompile('org.spockframework:spock-spring:2.0-groovy-3.0')
+    testCompile('cglib:cglib-nodep:3.3.0')
 }
 
 jacocoTestReport {
@@ -38,3 +35,6 @@ jacocoTestReport {
         xml.enabled true
     }
 }
+
+
+apply from: 'https://raw.githubusercontent.com/FINTLabs/fint-buildscripts/master/reposilite.gradle'
